<resources>
    <string name="app_name">Kaça Olur</string>

    <string name="welcome">Hoş Geldiniz</string>
    <string name="enter_button_text">GÖNDER</string>
    <string name="back_button_text">GERi</string>
    <string name="evet_button_text">EVET</string>
    <string name="start_button_text">BAŞLA</string>
    <string name="verification_code_hint">Koda</string>
    <string name="need_your_phone_number">"We need your phone number to create your account or to log you in."</string>
    <string name="may_we_send_sms">"May we send you an SMS to confirm your number? Standard rates apply."</string>
    <string name="code_is_coming">"Great! A four digit code is on its way. Please enter it below. It may take a minute or two to arrive."</string>
    <string name="sorry_username_taken">"Sorry, %1$s is already using Kaça Olur. Please choose another username."</string>
    <string name="choose_display_name">"Success! What should we call you? This will be visible to couriers."</string>
    <string name="nice_to_meet_you">"Nice to meet you, %1$s. Ready to get started?"</string>
    <string name="welcome_back">"Welcome back, %1$s. \nReady to place an order?"</string>

    <string name="order">Sipariş</string>
    <string name="what_do_you_need">Ne lazım?</string>
    <string name="other_details">Detaylar:</string>
    <string name="item_description">Kaç tane? Hangi marka? Hangi marketten? Başka detaylar var mı?</string>
    <string name="attach_picture_button">"Fotoğraf Ekle"</string>
    <string name="kaca_olur">Kaça Olur?</string>

    <string name="choose">Teklif Seç</string>
    <string name="bid_list_instructions">"Bids for your item will appear here.\nAccept the first one you get or wait for an even better one!"</string>
    <string name="item_name_header">Ürün adı: %1$s</string>
    <string name="item_description_header">Ürün detaylar: %1$s</string>

    <string name="courier_name">%s</string>
    <string name="delivery_price_header_bold">"Teslimat ücreti: &lt;b> %1$.2f lira &lt;/b>"</string>
    <string name="delivery_time_header_bold">"Teslimat süresi: &lt;b> %s dakika "&lt;/b>"</string>
    <string name="accept_bid">Kabul et</string>

    <string name="item_price_capitalized">"Ürün Ücreti: %1$.2f"</string>
    <string name="delivery_price_capitalized">Teslimat Ücreti: %1$.2f lira</string>

    <string name="item_price_header">"Ürün ücreti: %1$.2f"</string>
    <string name="delivery_price_header">Teslimat ücreti: %1$.2f lira</string>
    <string name="delivery_time_header">Teslimat süresi: %s dakika</string>

    <string name="question_header">Soru: %s </string>
    <string name="answer_question_button">Cevapla</string>
    <string name="edit_text_answer_header">Cevap: </string>
    <string name="submit_answer">Cevapla</string>
    <string name="saved_answer_header">Cevap: %s </string>
    <string name="shared_prefs_filename">"com.annalisetarhan.kacaolur.prefs"</string>
    <string name="save_answer_button_text">Gönder</string>

    <string name="bid_accepted">"Bid Accepted"</string>
    <string name="bid_accepted_instructions">"%s is on it! You\'ll be able to approve your item's price before it is purchased"</string>
    <string name="view_order">"SiPARiŞiM"</string>
    <string name="courier_profile_picture_text_description">Courier profile picture</string>

    <string name="mm_ss">"%1$s:%2$s"</string>
    <string name="hh_mm">"%1$s:%2$s"</string>
    <string name="hh_mm_ss">"%1$s:%2$s:%3$s</string>
    <string name="add_zero">0%1$d</string>
    <string name="enter_message">Mesaj yaz</string>
    <string name="send">Gönder</string>

    <string name="item_price_fiyat">"Ürün fiyatı: %.02f"</string>
    <string name="reject">Reddet</string>
    <string name="accept">Kabul Et</string>
    <string name="geri">GERi</string>
    <string name="gonder">Gönder</string>
    <string name="oh_no_what_s_wrong">Sorun ne?</string>
    <string name="inspect_item">Onayla</string>
    <string name="retake_picture">Fotoğraf Ekle</string>
    <string name="payment">Ödeme</string>
    <string name="confirm">Onayla</string>
    <string name="pay">Ödeme</string>

    <string name="reason_for_rejection">"Reason for rejection: %1$s</string>
    <string name="courier_s_item_picture">Courier\'s item picture</string>

    <string name="total_price_header">"Toplam Ücret: %.2f"</string>
    <string name="payment_confirmed">"Payment confirmed!"</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="display_name">Display Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="sample_phone_number">542 549 5479</string>
    <string name="sample_username">Görkem Tarhan</string>
    <string name="wait">Kalan Süre</string>
    <string name="item_name">Item name:</string>
    <string name="submitted_picture">Submitted picture</string>
    <string name="tell_courier_how_to_fix">Lütfen sorunun ne olduğunu kuryenize bildiriniz.</string>
    <string name="enter_phone_number">Enter your phone number to create an account or to log in.</string>
    <string name="numara_degis">Numara Değiş</string>
    <string name="basla">başla</string>
    <string name="please_choose_a_display_name">Choose a display name</string>
    <string name="choose_longer_username">Please choose a display name at least four characters long.</string>
    <string name="please_enter_code">Please enter the four digit code texted to you.</string>
    <string name="giris">Giriş</string>
    <string name="giris_button_text">"GiRiŞ</string>
    <string name="hos_bulduk">Hoş Bulduk</string>
    <string name="welcome_to_kaca_olur">Welcome to Kaça Olur!</string>
</resources>
