<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            tools:context="com.annalisetarhan.kacaolur.settings.SettingsFragment">

        <TextView
                android:text="@string/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HeadlineStyle" android:id="@+id/setting_textview"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/display_name" android:id="@+id/display_name_textview"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/display_name_display"
                app:layout_constraintTop_toTopOf="@+id/display_name_display"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" android:id="@+id/display_name_display"
                android:text="@string/sample_username"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/setting_textview"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/phone_number_header"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/phone_number_display"
                app:layout_constraintBottom_toBottomOf="@+id/phone_number_display"
                app:layout_constraintStart_toStartOf="parent" android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" android:id="@+id/phone_number_display"
                android:text="@string/sample_phone_number"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/display_name_display"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>