<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="courier_name_formatted" type="String"/>
        <variable name="question_formatted" type="String"/>
    </data>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp" android:id="@+id/priceCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@drawable/response_list_border">

            <TextView
                    android:text="@{courier_name_formatted}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/courier_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/answer_button"
                    tools:text="@string/courier_name"/>

            <TextView
                    android:text="@{question_formatted}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/question"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/courier_name"
                    app:layout_constraintEnd_toStartOf="@+id/answer_button"
                    tools:text="@string/question_header"/>
            <Button
                    android:text="@string/answer_question_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" android:id="@+id/answer_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="visible"/>
            <EditText
                    android:hint="@string/edit_text_answer_header"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/answer_edit_text"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/question"
                    android:visibility="gone"/>
            <Button
                    android:text="@string/save_answer_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" android:id="@+id/save_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/answer_saved_text"
                    app:layout_constraintTop_toBottomOf="@+id/question"
                    android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>