<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/order_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/yeni_siparis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order" style="@style/HeadlineStyle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/yeni_siparis"
                app:layout_constraintBottom_toTopOf="@id/kaca_button">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/item_description_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/what_do_you_need" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="@+id/item_name_edit_text"
                        app:layout_constraintBottom_toBottomOf="@+id/item_name_edit_text" android:textSize="18sp"/>
                <EditText
                        android:id="@+id/item_name_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:maxLines="1"
                        app:layout_constraintStart_toEndOf="@+id/item_description_textview"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:id="@+id/other_details_prompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other_details"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="@+id/item_description_edit_text"
                        app:layout_constraintBottom_toBottomOf="@+id/item_description_edit_text"/>
                <EditText
                        android:id="@+id/item_description_edit_text"
                        android:layout_width="0dp"
                        android:hint="@string/item_description"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:gravity="start|top"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/item_name_edit_text"
                        android:maxLength="300"
                        app:layout_constraintStart_toEndOf="@+id/other_details_prompt"
                        android:layout_marginStart="8dp"/>
                <Button
                        android:id="@+id/attach_picture_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attach_picture_button" android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/item_description_edit_text"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"/>
                <ImageView
                        android:contentDescription="@string/submitted_picture"
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/attach_picture_button"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
        <Button
                android:id="@+id/kaca_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kaca_olur" android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:textSize="30sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>