<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="item_price_formatted" type="String"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm" style="@style/HeadlineStyle"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/courier_s_item_picture"
                    app:srcCompat="@android:drawable/ic_menu_mapmode"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/confirm" android:layout_marginTop="16dp"/>

            <View android:id="@+id/top_divider"
                  style="@style/Divider"
                  android:layout_marginTop="16dp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/imageView"/>

            <TextView
                    android:id="@+id/item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{item_price_formatted}" tools:text="Price 5.50"
                    app:layout_constraintTop_toBottomOf="@id/top_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:textSize="24sp"
                    android:padding="6dp"
                    android:textAlignment="center"/>

            <View android:id="@+id/bottom_divider"
                  style="@style/Divider"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/item_price"/>


        <androidx.cardview.widget.CardView
                android:id="@+id/complaint_cardview"
                android:layout_width="match_parent" android:layout_height="0dp"
                android:visibility="invisible"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/buttons_layout"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/bottom_divider"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent">
            <EditText
                    android:id="@+id/complaintBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/oh_no_what_s_wrong"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
                android:id="@+id/buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="?android:attr/buttonBarStyle" app:layout_constraintBottom_toBottomOf="parent">
            <Button
                    android:id="@+id/reject_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reject"
                    android:textSize="24sp"
                    android:layout_marginEnd="30dp" android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"/>
            <Button
                    android:id="@+id/accept_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:textSize="24sp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1" android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"/>
            <Button
                    android:id="@+id/geri_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/geri"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:layout_marginEnd="30dp" android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:visibility="gone"/>
            <Button
                    android:id="@+id/gonder_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gonder"
                    android:textSize="24sp"
                    android:layout_weight="1" android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:visibility="gone"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
        </layout>