<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/welcome_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                style="@style/HeadlineStyle" app:layout_constraintHorizontal_bias="0.5"/>

        <TextView
                android:id="@+id/primary_text_block"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_kaca_olur"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/welcome" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/buttons_layout" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.3"/>


        <LinearLayout
                android:id="@+id/buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarStyle"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent">

            <Button
                    android:id="@+id/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:text="@string/hos_bulduk"
                    android:textSize="24sp"
                    android:layout_marginEnd="30dp" android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>