<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/layout">

    <data>
        <variable name="item_price_formatted" type="String"/>
        <variable name="delivery_price_formatted" type="String"/>
        <variable name="total_price_formatted" type="String"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/payment_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment" style="@style/HeadlineStyle"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>

        <View android:id="@+id/top_divider"
              style="@style/Divider"
              android:layout_marginTop="16dp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@id/payment_textview"/>

        <LinearLayout
                android:id="@+id/prices_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/top_divider">

            <TextView
                    android:id="@+id/item_price_textview"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@{item_price_formatted}"
                    tools:text="Item Price: 8.00"
                    android:textAlignment="center"
                    android:layout_marginStart="16dp"
                    android:textSize="24sp"/>

            <TextView
                    android:id="@+id/delivery_price_textview"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@{delivery_price_formatted}"
                    android:layout_marginStart="16dp"
                    android:textAlignment="center"
                    tools:text="Delivery Price: 3.00"
                    android:textSize="24sp"/>

        </LinearLayout>

        <View android:id="@+id/bottom_divider"
              style="@style/Divider"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@id/prices_linear_layout"/>


        <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent" android:layout_height="250dp"
                app:srcCompat="@android:drawable/ic_menu_mapmode" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/bottom_divider"/>


        <TextView
                android:id="@+id/total_price_textview"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@{total_price_formatted}"
                tools:text="Total Price: 11.00"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                android:layout_marginTop="24dp"
                android:textAlignment="center"
                android:textSize="30sp" android:textStyle="bold"/>

        <LinearLayout
                android:id="@+id/buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="?android:attr/buttonBarStyle" app:layout_constraintBottom_toBottomOf="parent">
            <Button
                    android:id="@+id/geri_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/geri"
                    android:textSize="24sp"
                    android:layout_marginEnd="30dp" android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"/>
            <Button
                    android:id="@+id/pay_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay"
                    android:textSize="24sp"
                    android:layout_weight="1" android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>